# kondi

./: Cargo.toml  TODO.md
examples/: empty.rs  rot_box.rs  walking_box.rs
src/: lib.rs  object.rs  sstr.rs  textures.rs
src/object/: tex_box.rs
