[package]
name = "kondi"
version = "0.0.1"
authors = ["LFalch <lucas@wasd.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
log = "0.4"
byteorder = "1"
lazy_static = "1"

[dependencies.nalgebra]
version = "0.23"
features = ["mint"]

[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2

[profile.release]
lto = true